--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 80px;
+    margin-bottom: 0px;
 }
 
 .logo-container {
